...
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Text(
                  "Giỏ món ăn (${state.cart.size} món) 🛒",
                  style: TextStyle(
                    fontWeight: FontWeight.bold,
                    fontSize: 16,
                    color: theme.colorScheme.onPrimaryContainer,
                  ),
                ),
...
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(12.0)),
                elevation: 0,
                padding: const EdgeInsets.symmetric(vertical: 14.0),
              ),
              child: const Text(
                "Xác nhận đã ăn ✔️",
                style: TextStyle(fontWeight: FontWeight.bold),
              ),
            ),
          ],
        ),
      ),
...
