...
              style: OutlinedButton.styleFrom(
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(16.0)),
                side: BorderSide(color: customColors.primaryText, width: 1),
              ),
              child: Text(
                "Nhập tay",
                style: TextStyle(
                    fontSize: 13,
                    fontWeight: FontWeight.bold,
                    color: customColors.primaryText),
              ),
            ),
...
                      fontWeight: FontWeight.bold),
                ),
                onPressed: widget.onBack,
              )
            : null,
        title: Text(
          "Theo dõi Dinh dưỡng 🥗",
          style: TextStyle(
            fontWeight: FontWeight.bold,
            color: isDark ? AppColors.white : AppColors.navy,
          ),
        ),
      ),
...
